test/fail_compilation/fail312.d
void main() {
    int[1] a = 1;
    short b = 1;
    assert (a[] == b);
    assert (a[] <= b);
}

